Alignment fixes

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   box-sizing: border-box;
   font-family: Barlow;
   font-weight: 200;
-  letter-spacing: -0.05em;
+  letter-spacing: -0.04em;
   text-decoration: none;
   text-transform: uppercase;
   list-style: none;
@@ -103,26 +103,25 @@ main {
   justify-content: center;
 }
 
-h1 {
+.image-title {
   position: absolute;
   top: 80%;
   left: 60%;
-  font-weight: 700;
   z-index: 10;
+}
+
+h1, h2 {
+  display: block;
+  font-weight: 700;
   color: #ffffff;
   mix-blend-mode: difference;
 }
 
 h2 {
-  position: absolute;
-  top: 85%;
-  left: 60%;
-  z-index: 10;
-  color: #ffffff;
-  mix-blend-mode: difference;
+  color: #b0b0b0;
 }
 
-.image-container p {
+.image-description {
   position: absolute;
   top: 18%;
   left: 25%;
@@ -164,35 +163,67 @@ canvas {
   margin: 0 auto;
 }
 
-.menu-wrap {
-  position: relative;
-  overflow: hidden;
+.arrow {
+  width: 0;
+  height: 30px;
+  right: 5%;
+  top: 92%;
+  border: 1px solid #ffffff;
+  position: absolute;
+  animation: scroll 1.5s infinite;
+  -webkit-animation: scroll 1.5s infinite;
 }
 
-.menu-wrap a {
+.arrow::after {
+  content: "";
   display: block;
-  font-size: 40px;
-  transform: translateY(100%);
-  transition: 0.5s;
+  position: absolute;
+  top: 100%;
+  left: -5px;
+  width: 1px;
+  height: 10px;
+  border-top: 10px solid #ffffff;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
 }
 
-.menu-wrap.active a {
-  transform: translateY(0);
+@keyframes scroll {
+  0% {
+    height: 30px;
+  }
+  30% {
+    height: 40px;
+  }
+  60% {
+    height: 30px;
+  }
 }
-
-.menu-wrap span {
-  font-size: 12px;
+@-webkit-keyframes scroll {
+  0% {
+    height: 30px;
+  }
+  30% {
+    height: 40px;
+  }
+  60% {
+    height: 30px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
+  .image-title {
+    top: 75%;
+    left: 40%;
+  }
   h1 { 
-    left: 35%;
-    font-size: 28px;
+    font-size: 24px;
   }
   h2 {
-    left: 35%;
     font-size: 20px;
-    /* top: 68%; */
+  }
+  .image-description {
+    left: 5%;
+    top: 22%
   }
 }
 
